Fixed footer spacing

--- a/docroot/themes/iucn_frontend/assets/css/style.css
+++ b/docroot/themes/iucn_frontend/assets/css/style.css
@@ -431,7 +431,7 @@ html {
   position: relative;
 }
 body {
-  padding-bottom: 131px;
+  padding-bottom: 146px;
   position: static;
 }
 body.path-frontpage {
